test_suite/tests/ui/fail/help_attribute/duplicated_command_help.stderr
error: custom attribute panicked
 --> $DIR/duplicated_command_help.rs:5:1
  |
5 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: multiple `#[command_help]` defined
